{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 20,
  "lineage": "aca0a3a6-25b5-0683-c944-88ded9611f8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_cloud_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:internet-gateway/igw-02abcb1c0703d8567",
            "id": "igw-02abcb1c0703d8567",
            "owner_id": "712227316377",
            "tags": {
              "Name": "dev_cloud_gateway"
            },
            "tags_all": {
              "Name": "dev_cloud_gateway"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:route-table/rtb-099edf26c1ccac9f2",
            "id": "rtb-099edf26c1ccac9f2",
            "owner_id": "712227316377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02abcb1c0703d8567",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:route-table/rtb-06aa99a836b242748",
            "id": "rtb-06aa99a836b242748",
            "owner_id": "712227316377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02abcb1c0703d8567",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b66176e216734dbf",
            "route_table_id": "rtb-099edf26c1ccac9f2",
            "subnet_id": "subnet-0005ee73a3fdebb38"
          },
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_route_table.private",
            "aws_subnet.private_subnet_a",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0835232f600e588d3",
            "route_table_id": "rtb-099edf26c1ccac9f2",
            "subnet_id": "subnet-07a38e28aa23268c0"
          },
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_route_table.private",
            "aws_subnet.private_subnet_b",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008bf1db1a13d5f06",
            "route_table_id": "rtb-099edf26c1ccac9f2",
            "subnet_id": "subnet-070977bf1d1243f53"
          },
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_route_table.private",
            "aws_subnet.private_subnet_c",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd65e2eb08e1fee",
            "route_table_id": "rtb-06aa99a836b242748",
            "subnet_id": "subnet-089ea4d1fe0d1b552"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010e151ca50c57898",
            "route_table_id": "rtb-06aa99a836b242748",
            "subnet_id": "subnet-038f301030ef9818a"
          },
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f97c0cdcb32d5545",
            "route_table_id": "rtb-06aa99a836b242748",
            "subnet_id": "subnet-041f14a4e68d4f241"
          },
          "dependencies": [
            "aws_internet_gateway.dev_cloud_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_c",
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-0005ee73a3fdebb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.0.104.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0005ee73a3fdebb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-07a38e28aa23268c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.0.105.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a38e28aa23268c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-070977bf1d1243f53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.0.106.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070977bf1d1243f53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-c"
            },
            "tags_all": {
              "Name": "private-subnet-c"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-089ea4d1fe0d1b552",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089ea4d1fe0d1b552",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-038f301030ef9818a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f301030ef9818a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:subnet/subnet-041f14a4e68d4f241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f14a4e68d4f241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712227316377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-0f425bcd743678706"
          },
          "dependencies": [
            "aws_vpc.dev_cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:712227316377:vpc/vpc-0f425bcd743678706",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0249a00c2dd5b3241",
            "default_route_table_id": "rtb-07cfd053f81970ccf",
            "default_security_group_id": "sg-0e6bae44c145e0147",
            "dhcp_options_id": "dopt-08a50dbe69f283542",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f425bcd743678706",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cfd053f81970ccf",
            "owner_id": "712227316377",
            "tags": {
              "Name": "dev_cloud-vpc"
            },
            "tags_all": {
              "Name": "dev_cloud-vpc"
            }
          }
        }
      ]
    }
  ]
}